# gen-server/model/models.ts
@@ -1,0 +1,3 @@
+export * from './createTaskDto';
+export * from './task';
+export * from './updateTaskDto';
