# gen-server/model/task.ts
@@ -1,0 +1,22 @@
+/**
+ * API
+ * API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface Task { 
+    id: number;
+    title: string;
+    description?: string;
+    done: boolean;
+    createdAt?: string;
+    updatedAt?: string;
+}
+
