# gen-server/model/updateTaskDto.ts
@@ -1,0 +1,19 @@
+/**
+ * API
+ * API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface UpdateTaskDto { 
+    title?: string;
+    description?: string;
+    done?: boolean;
+}
+
